Making the web app to be mobile friendly

--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,11 +1,14 @@
 .category-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 20px;
-    row-gap: 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
 }
 .category-title {
-    font-size: 38px;
+    font-size: 28px;
     margin-bottom: 25px;
-    text-align: center;
+    cursor: pointer;
+
+    &:hover {
+        color: grey;
+    }
   }
