Added an icon to the title and made the web app more responsive on mobile devices

--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,6 +1,10 @@
 .authentication-container {
     display: flex;
-    width: 900px;
-    justify-content: space-between;
-    margin: 30px auto;
+    // width: 900px;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    // @media screen and (max-width: 515px) {
+        
+    // }
 }
