--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -1,5 +1,7 @@
 .product-card-container {
-  width: 100%;
+  width: 270px;
+  height: 350px;
+  margin: 10px auto 10px;
   display: flex;
   flex-direction: column;
   height: 350px;
