--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,7 +1,8 @@
-.sign-up-container {
+.sign-in-container {
     display: flex;
     flex-direction: column;
-    width: 380px;
+    min-width: 310px;
+    margin: 20px;
 }
 h2 {
     margin: 10px 0;
