--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,7 +1,9 @@
 .sign-up-container {
+    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    width: 380px;
+    min-width: 310px;
+    margin: 20px;
 }
 h2 {
     margin: 10px 0;
