--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,8 +1,25 @@
 .category-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
+    // width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    // grid-column-gap: 1rem;
+    // grid-row-gap: 2rem;
+
+
+
+    // @media screen and (max-width: 515px) {
+    //     grid-template-columns: 1fr;
+    //     margin: 0 auto;
+    //     grid-column-gap: 1rem;
+    //     grid-row-gap: 2rem;
+    // }
 }
+
 .category-title {
     font-size: 28px;
     margin-bottom: 25px;
